--- a/app/src/main/res/layout/fragment_amazon_feed.xml
+++ b/app/src/main/res/layout/fragment_amazon_feed.xml
@@ -7,6 +7,12 @@
     tools:context=".AmazonFeed">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:background="@color/white"
