added gradient to article card

--- a/app/src/main/res/layout/article_card.xml
+++ b/app/src/main/res/layout/article_card.xml
@@ -19,6 +19,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
+                android:foreground="@drawable/gradient_background"
                 app:layout_constraintBottom_toTopOf="@+id/supporting_text"
                 app:layout_constraintDimensionRatio="H,16:9"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +31,6 @@
             <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
-                android:background="#CCFFFFFF"
                 android:maxLines="1"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="68dp"
@@ -38,6 +38,10 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
+                android:shadowColor="#ffffff"
+                android:shadowDx="0.0"
+                android:shadowDy="0.0"
+                android:shadowRadius="280"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#DE000000"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +53,6 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="0dp"
-                android:background="#CCFFFFFF"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
