--- a/app/src/main/res/layout/article_card.xml
+++ b/app/src/main/res/layout/article_card.xml
@@ -7,7 +7,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        android:layout_marginEnd="8dp"
+        app:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
