--- a/app/src/main/res/layout/weather_card.xml
+++ b/app/src/main/res/layout/weather_card.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
-    android:layout_height="350dp"
+    android:layout_height="250dp"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp">
@@ -16,33 +16,30 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
+        android:background="@drawable/weather_background"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/city_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/updated_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/city_field"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
             android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/weather_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="70sp" />
 
         <TextView
             android:id="@+id/current_temperature_field"
@@ -50,16 +47,22 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="40sp" />
+            android:textColor="@color/white"
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/details_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/weather_icon"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_marginTop="86dp"
+            android:maxLines="2"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
