--- a/app/src/main/res/layout/kindle_card.xml
+++ b/app/src/main/res/layout/kindle_card.xml
@@ -33,15 +33,16 @@
 
         <TextView
             android:id="@+id/progress"
-            android:layout_width="188dp"
-            android:layout_height="46dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="11dp"
+            android:layout_width="102dp"
+            android:layout_height="74dp"
+            android:layout_alignEnd="@+id/imageView4"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
             android:lineSpacingExtra="8dp"
             android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#DE000000"
+            android:textSize="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,10 +52,9 @@
             android:id="@+id/imageView4"
             android:layout_width="103dp"
             android:layout_height="98dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="17dp"
-            android:layout_marginTop="39dp"
+            android:layout_marginEnd="12dp"
             app:srcCompat="@mipmap/kindle_logo_fg" />
 
 
