--- a/app/src/main/res/layout/weather_card.xml
+++ b/app/src/main/res/layout/weather_card.xml
@@ -1,45 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:layout_marginTop="8dp"
+    android:layout_height="200dp"
+    android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginTop="8dp"
+    app:cardCornerRadius="8dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/weather_background"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:background="@drawable/weather_background"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/city_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:id="@+id/updated_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/white"
-            android:textSize="13sp" />
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/current_temperature_field"
@@ -56,13 +44,11 @@
             android:id="@+id/details_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:gravity="center_horizontal"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="86dp"
             android:maxLines="2"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
