Added Google Sans Font

--- a/app/src/main/res/layout/video_card.xml
+++ b/app/src/main/res/layout/video_card.xml
@@ -39,7 +39,8 @@
                 android:layout_marginStart="19dp"
                 android:lineSpacingExtra="8dp"
                 android:maxLines="2"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="50dp"
                 android:textColor="#DE000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
