--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="search_opaque">#ffaa3f</color>
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
+    <color name="combo1">#b84dd4</color>
+    <color name="combo2">#a32dd8</color>
+    <color name="combo3">#3b96fd</color>
+    <color name="combo4">#43c59b</color>
+    <color name="combo5">#f98f6b</color>
 </resources>
