--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -10,36 +10,48 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="23dp"
-        android:layout_marginEnd="11dp"
-        android:text="Button" />
+        android:layout_alignTop="@+id/button3"
+        android:layout_marginEnd="13dp"
+        />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/button1"
-        android:text="Button" />
+        android:layout_marginBottom="42dp"
+        android:layout_marginStart="15dp"
+        />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/button1"
-        android:layout_marginStart="96dp"
-        android:text="Button" />
+        android:layout_alignTop="@+id/button3"
+        android:layout_marginStart="91dp"
+        />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/button3"
+        android:layout_marginEnd="86dp"
+        />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignTop="@+id/button1"
-        android:layout_toStartOf="@+id/button1"
-        android:text="Button" />
+        android:background="@mipmap/home_launcher_icon_round"
+        android:layout_centerHorizontal="true"
+       />
+
 </RelativeLayout>
