videocard, weather bg

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="default_background">#3d3d3d</color>
     <color name="combo1">#b84dd4</color>
     <color name="combo2">#a32dd8</color>
-    <color name="combo3">#3b96fd</color>
+    <color name="combo3">#1CACDC</color>
     <color name="combo4">#43c59b</color>
     <color name="combo5">#f98f6b</color>
 </resources>
