--- a/app/src/main/res/drawable/gradient_background_prime.xml
+++ b/app/src/main/res/drawable/gradient_background_prime.xml
@@ -2,10 +2,9 @@
     android:shape="rectangle" >
 
     <gradient
-        android:angle="90"
+        android:angle="0"
         android:endColor="#00000000"
-        android:startColor="#ffffffff"
-        android:centerColor="#88888888" />
+        android:startColor="@color/combo3" />
 
     <corners android:radius="0dp" />
 </shape>
