--- a/app/src/main/res/layout/article_card.xml
+++ b/app/src/main/res/layout/article_card.xml
@@ -11,6 +11,7 @@
         android:layout_marginEnd="8dp"
         app:cardCornerRadius="8dp"
         app:cardBackgroundColor="@color/combo4"
+        app:cardElevation="10dp"
         app:contentPaddingTop="3dp"
         >
 
@@ -70,7 +71,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/title" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/ctype"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
