--- a/app/src/main/res/layout/video_card.xml
+++ b/app/src/main/res/layout/video_card.xml
@@ -9,7 +9,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="10dp">
 
         <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
@@ -41,7 +42,8 @@
                 android:maxLines="2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="50dp"
-                android:textColor="#DE000000"
+                android:textColor="#000000"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -66,6 +68,20 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="72dp"
                 app:srcCompat="@mipmap/prime_video_play_round" />
+
+            <TextView
+                android:id="@+id/ctype1"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/imageView2"
+                android:layout_alignParentTop="true"
+                android:background="@color/combo3"
+                android:text="Video"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteY="0dp" />
 
         </RelativeLayout>
 
